--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,5 @@
+ROUTER_HOSTNAME=192.168.15.1
 ROUTER_USERNAME=admin
-ROUTER_PASSWORD=password
+ROUTER_PASSWORD=
+INTERNAL_DATA_SERVER_HOST=127.0.0.1
+INTERNAL_DATA_SERVER_PORT=49737
