Implemented new version from detached repo
Sorry no git history

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "router-vis-extractor",
   "type": "module",
   "version": "1.0.0",
-  "description": "A project to extract, save and provide data from a router's state over time for the router-vis project",
+  "description": "A project to extract, persist and provide data from a router's state over time for the router-vis project",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
